# desktop-soundcloud

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  spec_global.md
codex_specs/: step_0.md  step_1.md  step_10.md  step_2.md  step_3.md  step_4.md  step_5.md  step_6.md  step_7.md  step_8.md  step_9.md
soundcloud-wrapper-tauri/: .gitignore  README.md  SECURITY_CHECKLIST.md  index.html  package-lock.json  package.json  vite.config.ts
soundcloud-wrapper-tauri/.github/workflows/: tauri-build.yml
soundcloud-wrapper-tauri/docs/: how-to-build.md  musicbrainz-credentials.md  qa-plan.md  release-signing.md
soundcloud-wrapper-tauri/scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
soundcloud-wrapper-tauri/src/: App.tsx  main.ts  main.tsx  styles.css
soundcloud-wrapper-tauri/src-tauri/: Cargo.toml  tauri.conf.json
soundcloud-wrapper-tauri/src-tauri/capabilities/: default.json
soundcloud-wrapper-tauri/src-tauri/permissions/: open-external.json
soundcloud-wrapper-tauri/src-tauri/src/: discogs.rs  lib.rs  main.rs  media.rs  musicbrainz.rs  rekordbox.rs
soundcloud-wrapper-tauri/src-tauri/src/scripts/: inject.js
soundcloud-wrapper-tauri/tests/: qa-plan.test.js
