[package]
name = "soundcloud-wrapper-tauri"
version = "0.1.0"
description = "SoundCloud Wrapper desktop shell"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "soundcloud_wrapper_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
mpris-linux = ["glib", "mpris-player"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
rusqlite = { version = "0.30", features = ["bundled"] }
quick-xml = { version = "0.30", features = ["serialize"] }
sha2 = "0.10"
symphonia = { version = "0.5", default-features = false, features = [
    "aac",
    "alac",
    "flac",
    "isomp4",
    "mp3",
    "vorbis",
    "wav",
] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["sync", "time"] }

[target.'cfg(target_os = "linux")'.dependencies]
glib = { version = "0.15", features = ["v2_58"], optional = true }
mpris-player = { version = "0.6", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Foundation",
    "Media",
    "Media_MediaProperties",
    "Media_Playback",
    "Storage",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_System_WinRT",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSDictionary",
    "NSAutoreleasePool",
    "NSString",
] }
